--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "font-awesome": "latest",
     "angular-ui-router": "latest",
+    "angular-animate":"latest",
     "angular": "latest",
     "bootstrap": "latest",
     "jquery": "latest"
