--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
     "angular": "latest",
     "bootstrap": "latest",
     "jquery": "latest",
-    "angular-animate": "^1.6.6"
+    "angular-animate": "^1.6.6",
+    "angular-translate": "^2.17.0"
   }
 }
