--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "bootstrap": "latest",
     "jquery": "latest",
     "angular-animate": "^1.6.6",
-    "angular-translate": "^2.17.0"
+    "angular-translate": "^2.17.0",
+    "angular-loading-bar": "latest" 
   }
 }
