--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
     "jquery": "latest",
     "angular-animate": "^1.6.6",
     "angular-translate": "^2.17.0",
+    "owl.carousel": "^2.3.4",
     "angular-loading-bar": "latest" 
   }
 }
